force-app/main/default/objects/Meta__c/fields/DesenvolvimentoPessoal__c.field-meta.xml
<CustomField>
    <fullName>DesenvolvimentoPessoal__c</fullName>
    <label>Desenvolvimento Pessoal (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>