force-app/main/default/objects/Meta__c/fields/GastosFixos__c.field-meta.xml
<CustomField>
    <fullName>GastosFixos__c</fullName>
    <label>Gastos Fixos (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>