force-app/main/default/objects/Meta__c/fields/Investimentos__c.field-meta.xml
<CustomField>
    <fullName>Investimentos__c</fullName>
    <label>Investimentos (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>