force-app/main/default/objects/Meta__c/fields/Objetivos__c.field-meta.xml
<CustomField>
    <fullName>Objetivos__c</fullName>
    <label>Objetivos (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>