force-app/main/default/objects/Meta__c/fields/QualidadeDeVida__c.field-meta.xml
<CustomField>
    <fullName>QualidadeDeVida__c</fullName>
    <label>Qualidade de Vida (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>