force-app/main/default/objects/Meta__c/fields/ReservaEmergencia__c.field-meta.xml
<CustomField>
    <fullName>ReservaEmergencia__c</fullName>
    <label>Reserva de Emergência (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>