force-app/main/default/objects/Meta__c/fields/UsuarioProprietario__c.field-meta.xml
<CustomField>
    <fullName>UsuarioProprietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UsuarioProprietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Metas</relationshipName>
    <type>Lookup</type>
</CustomField>